@@ -1,6 +1,11 @@
 0.1.13  xx-xxx-2009
   o Remove an old warning on the relay settings page that running a bridge
     relay requires Tor 0.2.0.8-alpha or newer.
+  o Add a workaround for a bug that prevented Vidalia's tray icon from
+    getting adding to the system notification area on Gnome when Vidalia was
+    run on system startup. Patch by Steve Tyree. (Ticket #247)
+  o Fix a bug that prevented the control panel from displaying when
+    running on the Enlightenment window manager. Patch by Steve Tyree.
 
 
 0.1.12  16-Mar-2009
